<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="xyz.selfenrichment.robertotomas.radiobuttonmethods.MethodTwo"
    android:orientation="vertical">

    <include layout="@layout/method_select" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/extra_label"
        android:id="@+id/textView2"
        android:layout_marginTop="16dp" />

    <RadioGroup
        android:id="@+id/radio_group_extra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_extra_option_one"
            android:id="@+id/radio_button_extra_option_one"
            android:checked="false" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_extra_option_two"
            android:id="@+id/radio_button_extra_option_two"
            android:checked="false" />
    </RadioGroup>

</LinearLayout>
